# explain_log

./: README.md  pyproject.toml  requirements.txt
explain_log/: ai.py  cli.py  config.py  formatter.py  parser.py
